# LePIC-I-_3D

./: .readthedocs.yaml  CMakeLists.txt  README.md
Output/: particles.out  reactions.1  reactions.2  reactions.3  reactions.4  reactions.5
Output/Output_2D/: bcnd_xz.mco  bcnd_yz.mco  it1001_Ex_xy.mco  it1001_Ex_xz.mco  it1001_Ex_yz.mco  it1001_Ey_xy.mco  it1001_Ey_xz.mco  it1001_Ey_yz.mco  it1001_Ez_xy.mco  it1001_Ez_xz.mco  it1001_Ez_yz.mco  it1001_T1_xy.mco  it1001_T1_xz.mco  it1001_T1_yz.mco  it1001_T2_xy.mco  it1001_T2_xz.mco  it1001_T2_yz.mco  it1001_T3_xy.mco  it1001_T3_xz.mco  it1001_T3_yz.mco  it1001_T4_xy.mco  it1001_T4_xz.mco  it1001_T4_yz.mco  it1001_T5_xy.mco  it1001_T5_xz.mco  it1001_T5_yz.mco  it1001_n1_xy.mco  it1001_n1_xz.mco  it1001_n1_yz.mco  it1001_n2_xy.mco  it1001_n2_xz.mco  it1001_n2_yz.mco  it1001_n3_xy.mco  it1001_n3_xz.mco  it1001_n3_yz.mco  it1001_n4_xy.mco  it1001_n4_xz.mco  it1001_n4_yz.mco  it1001_n5_xy.mco  it1001_n5_xz.mco  (+38 more)
Plot/: avg_phi_xz.mco  compare.py  compareRho.py  compareSave.py  compareSave2.py  plotDATA_modular.py  plot_MagField.py  plot_average.py  plot_file.py  plot_film.py  plot_mco.py
docs/: conf.py  index.rst  inputs.rst  installation.rst  modules.rst  outputs.rst  overview.rst  physics.rst  readthedocs.rst  running.rst  structure.rst
docs/_build/html/: .buildinfo  code_structure.html  developers.html  genindex.html  index.html  inputs.html  installation.html  modules.html  objects.inv  outputs.html  overview.html  physics.html  quickstart.html  readthedocs.html  running.html  search.html  searchindex.js  structure.html
docs/_build/html/.doctrees/: code_structure.doctree  developers.doctree  environment.pickle  index.doctree  inputs.doctree  installation.doctree  modules.doctree  outputs.doctree  overview.doctree  physics.doctree  quickstart.doctree  readthedocs.doctree  running.doctree  structure.doctree
docs/_build/html/_sources/: index.rst.txt  outputs.rst.txt  overview.rst.txt  physics.rst.txt  quickstart.rst.txt
docs/_build/html/_static/css/: custom.css
docs/_static/: custom.css
docs/_static/css/: custom.css
input_dir/: boundary.inp  conditions.inp
input_dir/1D_limit/: conditions.inp  geometry.inp
input_dir/3D_box/: conditions.inp  geometry.inp
input_dir/3D_zoom/: boundary.inp  conditions.inp  geometry.inp
input_dir/Dpace_TRIUMF/: boundary.inp  conditions.inp  geometry.inp
input_dir/ITER/: conditions.inp  geometry.inp
input_dir/Metris/: boundary.inp  conditions.inp  geometry.inp
input_dir/Penning/: boundary.inp  conditions.inp
input_dir/Thruster/: boundary.inp  conditions.inp  geometry.inp
input_dir/example_sans/: conditions.inp  geometry.inp
modules/config/: mod_config.f90  mod_readConditions.f90
modules/core/: mod_RNG.f90  mod_constants.f90  mod_debug_checks.f90  mod_intro.f90  mod_part_info.f90  mod_state.f90  mod_utils.f90
modules/fields/: mod_PoissonDecomposition.f90  mod_PoissonSolver_legacy.f90  mod_chargeDeposition.f90  mod_charge_weights.f90  mod_density.f90  mod_electricField.f90  mod_fields.f90  mod_magneticField.f90
modules/geometry/: mod_boundary.f90  mod_domain.f90  mod_generateBoundary.f90
modules/io/: mod_output_2d.f90
modules/legacy/: load_part.f90  mg.f90  mg.h  particle_info.h  pdesolver.f90  sors.f90
modules/main/: main.f90  main_PoissonTest.f90
modules/particles/: mod_chemistryState.f90  mod_collisions.f90  mod_heating.f90  mod_legacy_particle_globals.f90  mod_load_particles_legacy.f90  mod_particleBC.f90  mod_particleMover.f90  mod_particle_loader.f90  mod_particle_sorting.f90  mod_particles.f90  mod_planeMoments.f90  mod_reactions.f90  mod_reactionsDB.f90
modules/simulation/: mod_simParams.f90  mod_simulation.f90
modules/test/: mod_poisson_test_driver.f90
